Manually specify the CA to use to avoid IDM to dynamically get the list of CAs for /etc/ipa/ca.crt
After having checked all the places where the code tries to fetch
the CAs (LDAP, local file, http) let's workaround the CA file placement
by hardcoding it via the ipaclient_ca_cert variable we pass to the ipaclient
role. Patch is also needed for this to work on ipaclient itself:

--- ipaclient_test.py	2020-11-13 20:03:57.684624723 +0100
+++ ipaclient_test.py.orig	2020-11-13 20:03:09.699270149 +0100
@@ -386,10 +386,10 @@

         if options.ca_cert_files is not None:
             for value in options.ca_cert_files:
-                #if not isinstance(value, list):
-                #    raise ValueError("Expected list, got {!r}".format(value))
+                if not isinstance(value, list):
+                    raise ValueError("Expected list, got {!r}".format(value))
                 # this is what init() does
-                #value = value[-1]
+                value = value[-1]
                 if not os.path.exists(value):
                     raise ValueError("'%s' does not exist" % value)
                 if not os.path.isfile(value):

--- a/roles/ipaclient.wrapper/tasks/main.yml
+++ b/roles/ipaclient.wrapper/tasks/main.yml
@@ -34,3 +34,5 @@
 
     # ipaclient should care about the files after initial install
     ipa_allow_repair: yes
+
+    ipaclient_ca_cert_file: '/etc/ipa/ca.crt'
