--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -52,9 +52,11 @@
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   tags: docuum
+  when: gitlab_runner_enable_docuum
 
 - name: start docuum
   docker_container:
     name: docuum
     state: started
   tags: docuum
+  when: gitlab_runner_enable_docuum
