Add mysqld exporters to static targets

--- a/roles/prometheus/defaults/main.yml
+++ b/roles/prometheus/defaults/main.yml
@@ -9,5 +9,7 @@ prometheus_node_hostgroups:
 prometheus_static_targets:
   - meet.gnome.org:9100
   - meet.gnome.org:9688
+  - gesture.gnome.org:9104
+  - scale.gnome.org:9104
 prometheus_https_targets:
   - rocketchat-exporter.openshift.gnome.org
