Configure Docker to use pull-through registry hosted on OSCP

--- a/roles/gitlab-runner/defaults/main.yml
+++ b/roles/gitlab-runner/defaults/main.yml
@@ -4,4 +4,8 @@ gitlab_runner_concurrent: 8
 gitlab_runner_check_interval: 0
 gitlab_runner_session_timeout: 1800
 
-gitlab_runner_dockerd_config: {}
+gitlab_runner_dockerd_config:
+  ipv6: true
+  fixed-cidr-v6: "2001:db8:1::/64"
+  registry-mirrors:
+    - ["https://dptr.openshift.gnome.org"]
