--- a/playbooks/node-exporter.yml
+++ b/playbooks/node-exporter.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: ral3,!gitlab.gnome.org
+- hosts: ral3,!gitlab.gnome.org,gitlab-runners
   gather_facts: true
   remote_user: root
   roles:
