--- a/playbooks/gitlab-runners-prometheus.yml
+++ b/playbooks/gitlab-runners-prometheus.yml
@@ -1,4 +1,10 @@
 ---
+- hosts: gitlab-runners,fosshost.gnome.org
+  gather_facts: true
+  remote_user: root
+  roles:
+   - node-exporter
+
 - name: gather facts from GitLab runners
   hosts: gitlab-runners
   remote_user: root
