--- a/roles/gitlab-runner/tasks/debian.yml
+++ b/roles/gitlab-runner/tasks/debian.yml
@@ -3,6 +3,31 @@
   apt:
     name: [python-apt, python3-apt, aptitude]
 
+- name: add packagecloud gpg key to apt keyring
+  apt_key:
+    url: https://packages.gitlab.com/runner/gitlab-runner/gpgkey
+    state: present
+
+- name: add gitlab-runner repository
+  apt_repository:
+    repo: "deb https://packages.gitlab.com/runner/gitlab-runner/debian/ {{ ansible_distribution_release }} main"
+    state: present
+
+- name: add authorized keys for root
+  copy:
+    src: pin-gitlab-runner.pref
+    dest: /etc/apt/preferences.d/pin-gitlab-runner.pref
+    mode: 0600
+    owner: root
+    group: root
+
+- name: install gitlab-runner
+  apt:
+    name: gitlab-runner
+    state: present
+    update_cache: yes
+    cache_valid_time: 3600
+
 - name: install gitlab-runner
   apt:
     name: gitlab-runner
