Make sure root and members of the root group can make use of the /dev/kvm virtualization interface

--- a/roles/gitlab-runner/handlers/main.yml
+++ b/roles/gitlab-runner/handlers/main.yml
@@ -10,3 +10,6 @@
 
 - name: restart docker
   service: name=docker.service state=restarted
+
+- name: reload udevadm
+  command: udevadm control --reload-rules
