New NSD class and associated playbooks/inventory

--- a/playbooks/ral3_rhel8.yml
+++ b/playbooks/ral3_rhel8.yml
@@ -27,3 +27,10 @@
   roles:
    - squid
    - node-exporter
+
+- hosts: nsd
+  gather_facts: true
+  remote_user: root
+  roles:
+   - nsd
+   - node-exporter
