--- a/roles/nsd/tasks/main.yml
+++ b/roles/nsd/tasks/main.yml
@@ -17,8 +17,8 @@
   file:
     path: "{{ nsd_master_zones_dir }}"
     state: directory
-    owner: root
-    group: root
+    owner: nsd
+    group: nsd
     mode: 0755
 
 - name: Create slave zones directory
