--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -14,6 +14,11 @@
 - name: iptables
   src: https://github.com/geerlingguy/ansible-role-firewall.git
   scm: git
-  
+
+- name: postfix
+  src: https://github.com/linux-system-roles/postfix
+  scm: git
+
 - geerlingguy.nodejs
 - geerlingguy.docker
+
