--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,4 @@
 inventory = inventory
 roles_path = roles
 vault_password_file = misc/get-vault-pass.sh
+vault_identity_list = lorry@./misc/lorry-vault-password.gpg
