Use SSH credentials instead of gitlab token for lorry mirroring.
This also includes a script for automatically setting gitlab's SSH
public key, but it's not called as part of a deployment.

Co-authored-by: Jonathan Maw <jonathan.maw@codethink.co.uk>

--- a/roles/lorry/files/docker-compose.yml
+++ b/roles/lorry/files/docker-compose.yml
@@ -25,6 +25,9 @@ services:
     volumes:
     - ./config:/config
     - ./working-area:/data/working-area
+    environment:
+    - LORRY_SSH_KEY=${LORRY_SSH_KEY}
+    - LORRY_SSH_KNOWN_HOSTS=${LORRY_SSH_KNOWN_HOSTS}
     restart: on-failure
     networks:
     - lorry
