--- a/roles/lorry/files/docker-compose.yml
+++ b/roles/lorry/files/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     - lorry-controller-webapp
     - --config
     - /config/webapp.conf
-    expose:
-    - 12765 # Should be internal only
+    ports:
+    - 127.0.0.1:12765:12765 # Should be internal only
     volumes:
     - ./config:/config
     - ./log:/data/log
