gitlab-runner: Lower NOFILE ulimit to 524288 inside containers to match host

--- a/roles/gitlab-runner/defaults/main.yml
+++ b/roles/gitlab-runner/defaults/main.yml
@@ -12,3 +12,8 @@ gitlab_runner_dockerd_config:
   runtimes:
     crun:
       path: /usr/bin/crun
+  default-ulimits:
+    nofile:
+      Hard: 524288
+      Name: nofile
+      Soft: 524288
