--- a/playbooks/ral3_rhel8.yml
+++ b/playbooks/ral3_rhel8.yml
@@ -3,7 +3,18 @@
   gather_facts: true
   remote_user: root
   collections:
-   - community.general.redhat_subscription
+   - community.general
+  tasks:
+    - name: Register system to RHSM
+      community.general.redhat_subscription:
+        state: present
+        username: "{{ rhsm_username }}"
+        password: "{{ rhsm_password }}"
+        auto_attach: true
+
+- hosts: all
+  gather_facts: true
+  remote_user: root
   roles:
    - packages
    - motd
