--- a/playbooks/ral3_rhel8.yml
+++ b/playbooks/ral3_rhel8.yml
@@ -46,3 +46,9 @@
   remote_user: root
   roles:
    - nsd
+
+- hosts: master.gnome.org
+  gather_facts: false
+  remote_user: root
+  roles:
+    - ftpadmin
