--- a/roles/nrpe/tasks/main.yml
+++ b/roles/nrpe/tasks/main.yml
@@ -40,7 +40,7 @@
 
 - name: Generate Ceph token for checks
   shell: /usr/bin/ceph auth get-or-create client.nagios mon 'allow r' > /etc/ceph/ceph.client.nagios.keyring creates=/etc/ceph/ceph.client.nagios.keyring
-  when: ('ceph' in group_names)
+  when: ('ceph_osds' in group_names)
 
 - name: Create directory for custom NRPE scripts
   file:
