Land the plugin on ipaservers

--- a/playbooks/ral3_rhel8.yml
+++ b/playbooks/ral3_rhel8.yml
@@ -62,3 +62,9 @@
   remote_user: root
   roles:
     - ftpadmin
+
+- hosts: ipaservers
+  gather_facts: false
+  remote_user: root
+  roles:
+    - ipaserver
