--- a/roles/postfix.wrapper/tasks/main.yml
+++ b/roles/postfix.wrapper/tasks/main.yml
@@ -4,8 +4,8 @@
   vars:
     postfix_conf:
       relayhost: "smtp-int.gnome.org"
-      myhostname: "{{ ansible_fqdn }}"
-      inet_interfaces: "localhost, vpn.{{ ansible_fqdn }}"
+      myhostname: "{{ ansible_hostname }}.gnome.org"
+      inet_interfaces: "localhost, vpn.{{ ansible_hostname }}.gnome.org"
       mynetworks: "127.0.0.0/8, 8.43.85.24/32, 172.31.2.36/32"
       smtpd_recipient_restrictions: "permit_mynetworks, reject"
       smtpd_client_restrictions: "permit_mynetworks, reject"
