--- a/roles/rsyslog/tasks/configure_client.yml
+++ b/roles/rsyslog/tasks/configure_client.yml
@@ -1,5 +1,17 @@
-- name: configure remote logging
+- name: Configure remote logging
   template:
     src: remotelog.conf.j2
     dest: /etc/rsyslog.d/remotelog.conf
+  notify: restart rsyslog
+
+- name: Install the audispd-plugins package
+  dnf:
+    name: audispd-plugins
+    state: present
+
+- name: Make sure auditd logs are forwarded
+  lineinfile:
+    path: /etc/audit/plugins.d/syslog.conf
+    regexp: '^active ='
+    line: 'active = yes'
   notify: restart rsyslog
