Auditd should be restarted for this task, not rsyslog

--- a/roles/rsyslog/tasks/configure_client.yml
+++ b/roles/rsyslog/tasks/configure_client.yml
@@ -14,4 +14,4 @@
     path: /etc/audit/plugins.d/syslog.conf
     regexp: '^active ='
     line: 'active = yes'
-  notify: restart rsyslog
+  notify: restart auditd
