Auditd still uses /usr/sbin/service, automatic detection won't work due to the existance of auditd systemd service file

--- a/roles/rsyslog/handlers/main.yml
+++ b/roles/rsyslog/handlers/main.yml
@@ -5,6 +5,5 @@
     state: restarted
 
 - name: restart auditd
-  service:
-    name: auditd
-    state: restarted
+  command:
+    cmd: /usr/sbin/service auditd restart
