New rsync credential for a GIMP mirror.
GIMP mirror by the LIP6, sorbonne universite.

See: https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/921

--- a/roles/ftpadmin/files/rsyncd.conf
+++ b/roles/ftpadmin/files/rsyncd.conf
@@ -17,4 +17,4 @@ gid = nobody
         list = yes
         read only = yes
         comment = The GIMP Download Site
-        auth users = gimpmirror, gimp-mirrors-hoobly-com, mirror-nbtelecom-com-br, artfiles-org, mirrorservice-org, fau-de, acc-umu-se, pixls-us, mirror-mdu-edu, nic-funet-fi, kr-freebsd-org, xmission-com, mirrors-ukfast-co-uk, astra-in-ua, dogado-de, cu-be, mirror-surf, nju-edu-cn, usessionbuddy-com, ip-connect, cc-uoc-gr, dotsrc-org, kumi-systems, gwdg-de, gethosted-online, lysator-liu-se, gimp-ca, ocf-berkeley-edu, mirror-freedif-org, sandyriver-net, icm-edu-pl, snt-utwente-nl, fcix-net
+        auth users = gimpmirror, gimp-mirrors-hoobly-com, mirror-nbtelecom-com-br, artfiles-org, mirrorservice-org, fau-de, acc-umu-se, pixls-us, mirror-mdu-edu, nic-funet-fi, kr-freebsd-org, xmission-com, mirrors-ukfast-co-uk, astra-in-ua, dogado-de, cu-be, mirror-surf, nju-edu-cn, usessionbuddy-com, ip-connect, cc-uoc-gr, dotsrc-org, kumi-systems, gwdg-de, gethosted-online, lysator-liu-se, gimp-ca, ocf-berkeley-edu, mirror-freedif-org, sandyriver-net, icm-edu-pl, snt-utwente-nl, fcix-net, lip6-fr
