--- a/roles/postfix.server/tasks/main.yml
+++ b/roles/postfix.server/tasks/main.yml
@@ -17,9 +17,10 @@
     postfix_backup_multiple: false
     postfix_conf:
       virtual_alias_maps: "{{ postfix_virtual_alias_maps | join(',') }}"
-      alias_database: "{{ postfix_alias_databases | join(',') }}"
+      alias_maps: "{{ postfix_alias_databases | join(',') }}"
       mydestination: "{{ postfix_mydestinations | join(',') }}"
       mynetworks: "{{ postfix_mynetworks | join(',') }}"
+      myhostname: "{{ postfix_myhostname }}"
       header_checks: regexp:/etc/postfix/header_checks
       mime_header_checks: regexp:/etc/postfix/mime_header_checks
       body_checks: regexp:/etc/postfix/body_checks
