--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -44,3 +44,7 @@
     state: started
     enabled: yes
   tags: prometheus_config
+
+- name: blackbox_exporter setup
+  include_playbook: blackbox.yml
+  when: enable_blackbox
