More minor fixes to the blackbox tasks list

--- a/roles/prometheus/tasks/blackbox.yml
+++ b/roles/prometheus/tasks/blackbox.yml
@@ -3,7 +3,7 @@
     name: prometheus_blackbox
     system: true
     state: present
-  when: configure_blackbox
+  when: enable_blackbox
 
 - name: create prometheus_blackbox system user
   user:
@@ -12,29 +12,29 @@
     shell: "/sbin/nologin"
     group: prometheus_blackbox
     createhome: false
-  when: configure_blackbox
+  when: enable_blackbox
 
 - name: create download directory
   file:
     path: /root/.ansible/tmp/prometheus_blackbox
     state: directory
-  when: configure_blackbox
+  when: enable_blackbox
 
 - name: download prometheus_blackbox {{ prometheus_blackbox_version }}
   get_url:
-    url: "https://github.com/prometheus/blackbox_exporter/releases/download/v{{ prometheus_blackbox_version }}/blackbox_exporter-{{ prometheus_version }}.linux-amd64.tar.gz"
+    url: "https://github.com/prometheus/blackbox_exporter/releases/download/v{{ prometheus_blackbox_version }}/blackbox_exporter-{{ prometheus_blackbox_version }}.linux-amd64.tar.gz"
     dest: "/root/.ansible/tmp/prometheus_blackbox/blackbox_exporter-{{ prometheus_blackbox_version }}.linux-amd64.tar.gz"
     checksum: "{{ prometheus_blackbox_checksum }}"
-  when: configure_blackbox
+  when: enable_blackbox
 
 - name: unpack prometheus blackbox binaries
   unarchive:
-    src: "/root/.ansible/tmp/prometheus_blackbox/blackbox_exporter-{{ prometheus_version }}.linux-amd64.tar.gz"
-    dest: /root/.ansible/tmp/prometheus_blacbox/
+    src: "/root/.ansible/tmp/prometheus_blackbox/blackbox_exporter-{{ prometheus_blackbox_version }}.linux-amd64.tar.gz"
+    dest: /root/.ansible/tmp/prometheus_blackbox/
     creates: "/root/.ansible/tmp/prometheus_blackbox/blackbox_exporter-{{ prometheus_blackbox_version }}.linux-amd64/prometheus"
     remote_src: true
   check_mode: false
-  when: configure_blackbox
+  when: enable_blackbox
 
 - name: land config file
   template:
@@ -44,7 +44,7 @@
     group: root
     mode: 0644
   notify: restart blackbox_exporter
-  when: configure_blackbox
+  when: enable_blackbox
 
 - name: install systemd unit
   template:
@@ -54,4 +54,4 @@
     group: root
     mode: 0644
   notify: restart blackbox_exporter
-  when: configure_blackbox
+  when: enable_blackbox
