--- a/roles/postfix.server/handlers/main.yml
+++ b/roles/postfix.server/handlers/main.yml
@@ -7,12 +7,12 @@
 
 - name: Postmap access file
   command:
-    cmd: "/usr/sbin/postmap {{ item.path }}"
+    cmd: "/usr/sbin/postmap {{ item.dest }}"
   with_items: "{{ _postfix_access_files.results | selectattr('changed', 'equalto', true) | list }}"
 
 - name: Postmap virtual aliases file
   command:
-    cmd: "/usr/sbin/postmap {{ item.path }}"
+    cmd: "/usr/sbin/postmap {{ item.dest }}"
   with_items: "{{ _postfix_virtual_aliases.results | selectattr('changed', 'equalto', true) | list }}"
 
 - name: Restart OpenDKIM
