Transport also requires a postmap run

--- a/roles/postfix.server/tasks/main.yml
+++ b/roles/postfix.server/tasks/main.yml
@@ -118,7 +118,9 @@
   notify:
     - Postmap virtual aliases file
     - Reload Postfix
-  when: '"/etc/postfix/virtual-aliases" in item'
+  when:
+    - '"/etc/postfix/virtual-aliases" in item'
+    - '"/etc/postfix/transport" in item'
 
 - name: Install OpenDKIM
   dnf:
