--- a/roles/postfix.server/tasks/main.yml
+++ b/roles/postfix.server/tasks/main.yml
@@ -34,7 +34,7 @@
       message_size_limit: 25480000
       qmgr_fudge_factor: 100
       transport_maps: hash:/etc/postfix/transport
-      smtpd_sender_restrictions: reject_sender_login_mismatch
+      smtpd_sender_restrictions: permit_mynetworks, reject_sender_login_mismatch
       smtpd_sasl_type: dovecot
       smtpd_sasl_path: private/auth
       smtpd_sasl_auth_enable: yes
